Feature/pbac support for cases (#748)