@@ -16,6 +16,7 @@
 
 package com.ritense.document.service.impl;
 
+import com.ritense.authorization.AuthorizationContext;
 import com.ritense.document.BaseIntegrationTest;
 import com.ritense.document.domain.impl.JsonSchemaDocumentDefinition;
 import com.ritense.document.service.DocumentStatisticService;
@@ -29,7 +30,6 @@ import org.springframework.security.test.context.support.WithMockUser;
 
 import javax.transaction.Transactional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static com.ritense.valtimo.contract.authentication.AuthoritiesConstants.USER;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -50,7 +50,7 @@ class DocumentStatisticServiceIntTest extends BaseIntegrationTest {
     public void beforeEach() {
         documentRepository.deleteAll();
         definition = definition();
-        documentDefinitionService.putDocumentDefinitionRoles(definition.id().name(), Set.of(USER));
+        documentDefinitionService.putDocumentDefinitionRoles(definition.id().name(), Set.of(FULL_ACCESS_ROLE));
 
         var user = new ValtimoUserBuilder().username(USERNAME).email(USERNAME).id(USER_ID).build();
         when(userManagementService.findById(USER_ID)).thenReturn(user);
@@ -58,17 +58,31 @@ class DocumentStatisticServiceIntTest extends BaseIntegrationTest {
     }
 
     @Test
-    @WithMockUser(username = USERNAME, authorities = USER)
+    @WithMockUser(username = USERNAME, authorities = FULL_ACCESS_ROLE)
     void shouldReturnUnassignedDocumentCount() {
+        // run without authorization
         var document1 = createDocument(definition, "{}");
         createDocument(definition, "{}");
         documentService.assignUserToDocument(document1.id().getId(), USER_ID);
 
         var unassignedDocumentCountDtos = documentStatisticService.getUnassignedDocumentCountDtos();
 
-        assertThat(documentService.getAllByDocumentDefinitionName(Pageable.unpaged(), "house").getTotalElements()).isEqualTo(2);
+        // run without authorization
+
+        assertThat(
+            AuthorizationContext.runWithoutAuthorization(
+                () -> documentService.getAllByDocumentDefinitionName(
+                    Pageable.unpaged(),
+                    "house"
+                    ).getTotalElements()
+            )
+        ).isEqualTo(2);
         assertThat(unassignedDocumentCountDtos).hasSizeGreaterThanOrEqualTo(1);
-        var unassignedHouseCountDto = unassignedDocumentCountDtos.stream().filter(dto->dto.getDocumentDefinitionName().equals("house")).collect(Collectors.toList()).get(0);
+        var unassignedHouseCountDto = unassignedDocumentCountDtos
+            .stream()
+            .filter(
+                dto -> dto.getDocumentDefinitionName().equals("house")
+            ).toList().get(0);
         assertThat(unassignedHouseCountDto.getDocumentDefinitionName()).isEqualTo("house");
         assertThat(unassignedHouseCountDto.getOpenDocumentCount()).isEqualTo(1);
     }
